Fix package file.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graphiql-explorer-example",
-  "homepage": "https://onegraph.github.io/graphiql-explorer-example",
+  "name": "disappearances-api",
+  "homepage": "https://eads.github.io/disappearances-api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
